web: minor fixes
- dashboard top bar remains sticky on mobile resolutions
  (concourse/concourse#2434)
- fix undocumented regression on no pipelines page: the vertical
  centering had stopped working due to CSS changes involved in
  extraneous scrollbar

--- a/web/assets/css/newtopbar.less
+++ b/web/assets/css/newtopbar.less
@@ -147,7 +147,6 @@
 
 @media (max-width: 812px) {
   .module-topbar {
-    position: unset;
     flex-flow: row wrap;
     height: unset;
     line-height: unset;
